# neatcode

./: .gitignore  README.md  cm_test.py  setup.cfg  test.py
neatcode/: base.py  context_management.py  decoration.py  object_manipulation.py
neatcode/legacy/: neatcode.py
neatcode/policy/: __init__.py  argument_substitution.py
tests/: base.py  cm_test.py  decorator_test.py
