[metadata]
name = neatcode-txetx
version = 0.0.2
author = Edu Vallejo Arguinzoniz
author_email = vallezoniz@gmail.com
description = A small pure python library containing implementations of common python patterns
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/txetxedeletxe/neatcode
project_urls =
    Bug Tracker = https://github.com/txetxedeletxe/neatcode/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .